# Git-MCP

./: .gitignore  Cargo.toml  README.md  requirements.txt  test.py
src/: analysis.rs  analysis_engine.py  chunker.rs  cli.py  client.py  git.rs  git_engine.py  indexer.rs  llm.rs  main.py  main.rs  server.py  tools.rs  utils.py
