[package]
name = "git-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
colored = "2"
regex = "1"
md5 = "0.7"
inquire = "0.6" # For the interactive prompt
dirs = "5.0"