[package]
name = "git-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
colored = "2"
md5 = "0.7"
inquire = "0.6"
dirs = "5.0"

# AST Parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c = "0.20"

# RAG / Indexing 
fastembed = "3"       # Local embedding model
rayon = "1.10"        # Parallel processing
anyhow = "1.0"        # Error handling